# wrench

./: .dockerignore  .gitignore  .mentor.config.json  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  dockerfile  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  review.sh
.github/workflows/: ci.yml
.husky/: pre-commit
apps/api/: .env.example  Dockerfile  Dockerfile.dev  go.mod  go.sum  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  dependencies.py  security.py  supabase.py
apps/api/app/routers/: advisor.py  builds.py  conversation.py  parts.py  vision.py
apps/api/app/schemas/: builds.py  conversation.py
apps/api/app/services/: advisor_service.py  ai_client.py  image_fetcher.py  parts_generator.py  vision_analyzer.py  vision_service.py
apps/api/cmd/api/: main.go
apps/api/internal/config/: config.go
apps/api/tests/: test_health.py
apps/api/tests/routers/: test_builds.py  test_conversation.py  test_parts_generation.py
apps/api/tests/services/: test_ai_client.py  test_image_fetcher.py  test_parts_generator.py
apps/web/: .env.example  Dockerfile  Dockerfile.dev  components.json  eslint.config.mjs  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
docs/: caching-strategy.md  capacity-estimation.md  dashboards-and-alerts.md  database-design.md  failure-modes.md  load-balancer-design.md  observability-design.md  requirements.md  schema.md  slos.md  system-design.md
docs/adr/: 001-rest-vs-graphql-vs-grpc.md  003-redis-caching.md  (+7 more)
(+124 files in other folders)
