[project]
name = "wrench-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "supabase>=2.4.0",
  "anthropic>=0.28.0",
  "google-genai>=0.1.0",
  "groq>=0.10.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
